force-app/main/default/objects/Firmware_Config__mdt/Firmware_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for ESP32 firmware OTA updates</description>
    <label>Firmware Config</label>
    <pluralLabel>Firmware Configs</pluralLabel>
</CustomObject>