force-app/main/default/objects/Firmware_Config__mdt/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <description>Current firmware version (e.g., 1.0.5)</description>
    <label>Firmware Version</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>