force-app/main/default/objects/Firmware_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this firmware version is the active/current release</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>