force-app/main/default/objects/Firmware_Config__mdt/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <description>Name of the Static Resource containing the firmware binary</description>
    <label>Resource Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>